# ff-regret

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  YAHOO_OAUTH_SETUP.md  pyproject.toml  railway.toml
app/: config.py  main.py  team_names.json  team_standings.json
app/db/: __init__.py
app/frontend/: base.html  index.html  team.html
app/frontend/components/: draft_regret_card.html  startsit_regret_card.html  waiver_regret_card.html
app/models/: __init__.py
app/services/: lineup_optimizer.py  nfl_service.py  player_mapper.py  regret_engine.py  scoring_calculator.py  yahoo_service.py  yahoo_service_new.py
scripts/: calculate_regrets.py  debug_draft.py  debug_scoring.py  debug_yahoo_api.py  fetch_nfl_data.py  fetch_team_names.py  fetch_waiver_wire.py  fix_player_names.py  initialize_data.py  initialize_data_fixed.py  initialize_data_v2.py  initialize_yahoo.py  map_players.py  map_players_from_game_logs.py  migrate_sqlite_to_postgres.py  recalculate_fantasy_points.py  recreate_player_map.py  reimport_nfl_game_logs.py  test_connection.py  test_regret_engine.py  test_scoring_calculator.py  test_yahoo_service.py  update_roster_eligible_positions.py  validate_scoring.py
