[project]
name = "ff-regret"
version = "0.1.0"
description = "Fantasy Football Regret Engine"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.19.0",
    "polars>=0.20.0",
    "nfl-data-py>=0.3.0",
    "yahoo-fantasy-api>=1.3.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "pandas>=2.0.0",
    "greenlet>=3.0.0",
    "rapidfuzz>=3.5.0",
    "pyarrow>=23.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "B", "C4", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
